--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       <h2>Skills</h2>
       <div class="skills">
         <ul>
-          <li>Legal Writing & Research</li>
           <li>Python Programming</li>
           <li>Linux Administration</li>
           <li>Cybersecurity Fundamentals</li>
@@ -102,11 +101,13 @@
             <p>Bachelor of Laws (LLB)</p>
             <span class="date">2024 – Present</span>
           </div>
+          <!--
           <div class="timeline-item">
             <h3>CS50 for Lawyers (HarvardX)</h3>
             <p>Introduction to computer science and programming for legal professionals</p>
             <span class="date">2025</span>
           </div>
+          -->
         </div>
       </div>
     </section>
@@ -157,24 +158,28 @@
         <button class="carousel-btn prev" aria-label="Previous">&larr;</button>
         <div class="carousel-track-container">
           <div class="carousel-track">
+            <!--
             <div class="cert-item">
-              <a href="https://www.sololearn.com/certificates/CT-J6JG79WJ" target="_blank">
-                <img src="certificates/Python_beginners.png" alt="Python Beginners Certificate">
+              <a href="URL" target="_blank">
+                <img src="certificates/CS50.png" alt="CS50 For Lawyers Certificate">
+              </a>
+            </div> 
+            -->
+            <div class="cert-item">
+              <a href="http://ude.my/UC-7e0afd8c-5231-445f-baa1-53131a632816" target="_blank">
+                <img src="certificates/CS.jpg" alt="Learn Ethical Hacking From Scratch Certificate">
               </a>
             </div>
+            <!--
             <div class="cert-item">
-              <a href="https://www.sololearn.com/certificates/CT-ZPW7RY2S" target="_blank">
+              <a href="URL" target="_blank">
+                <img src="certificates/IMG" alt="IMG_NAME">
               </a>
-                <img src="certificates/intermediate.png" alt="Python Intermediate Certificate">
-            </div>
+            </div> 
+          -->
             <div class="cert-item">
               <a href="https://www.sololearn.com/certificates/CT-XA53XLZY" target="_blank">
-              </a>
-                <img src="certificates/core.png" alt="Python Core Certificate">
-            </div>
-            <div class="cert-item">
-              <a href="https://www.sololearn.com/certificates/CC-FLJS8AOC" target="_blank">
-                <img src="certificates/data_science.png" alt="Data Science Certificate">
+                <img src="certificates/Py_Core.png" alt="Python Core Certificate">
               </a>
             </div>
           </div>
@@ -183,8 +188,10 @@
         <div class="carousel-indicators">
           <div class="indicator active" data-index="0"></div>
           <div class="indicator" data-index="1"></div>
-          <div class="indicator" data-index="2"></div>
-          <div class="indicator" data-index="3"></div>
+          <!--
+            <div class="indicator" data-index="2"></div>
+            <div class="indicator" data-index="3"></div>
+          -->
         </div>
       </div>
     </section>
