--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav>
     <div class="container nav-wrapper">
-      <a href="#about" class="nav-logo">
+      <a href="#" class="nav-logo" onclick="scrollToTop(event)">
         <i class="fas fa-scale-balanced"></i>
         Adam Ghanem
       </a>
@@ -101,13 +101,11 @@
             <p>Bachelor of Laws (LLB)</p>
             <span class="date">2024 – Present</span>
           </div>
-          <!--
           <div class="timeline-item">
             <h3>CS50 for Lawyers (HarvardX)</h3>
             <p>Introduction to computer science and programming for legal professionals</p>
             <span class="date">2025</span>
           </div>
-          -->
         </div>
       </div>
     </section>
