--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       <h2>Projects</h2>
       <div class="projects">
         <div class="projects-grid">
+
           <div class="project-card">
             <div class="project-img">
               <img src="projects/Cipher.png" alt="TheCipher App">
@@ -125,6 +126,7 @@
               <a href="https://github.com/AdamG00D/TheCipher_App" target="_blank" class="project-link">View Project</a>
             </div>
           </div>
+
           <div class="project-card">
             <div class="project-img">
               <img src="projects/Blu.png" alt="BLU App">
@@ -135,6 +137,7 @@
               <a href="https://github.com/AdamG00D/BLU_App" target="_blank" class="project-link">View Project</a>
             </div>
           </div>
+          
           <div class="project-card">
             <div class="project-img">
               <img src="projects/Elbasha.png" alt="ElBasha App">
@@ -143,8 +146,21 @@
               <h3>ElBasha App</h3>
               <p>Fake Police Voice Prank</p>
               <a href="https://github.com/AdamG00D/ElBasha_App" target="_blank" class="project-link">View Project</a>
+            </div> 
+          </div>
+
+          <div class="project-card">
+            <div class="project-img">
+              <img src="projects/secretly.png" alt="Secretly Website">
+            </div>
+            <div class="project-content">
+              <h3>Secretly Website</h3>
+              <p>A anonymous messaging website that lets users send you secret messages without revealing their identity. Fully responsive and supports both Arabic and English automatically.</p>
+              <a href="https://github.com/AdamG00D/secretly" target="_blank" class="project-link">View Project</a>
+              <a href="https://adamg00d.github.io/secretly/" target="_blank" class="project-link">Visit Website</a>
             </div>
           </div>
+
         </div>
       </div>
     </section>
