--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h2>About Me</h2>
       <div class="about">
         <p>
-          I am a law student at Alexandria University combining legal studies with technology. Skilled in Python, Linux administration, foundational cybersecurity and complete CS50 for Lawyers.
+          I am a law student at Alexandria University combining legal studies with technology. Skilled in Python, Linux administration, foundational cybersecurity and I have completed the CS50 for Lawyers course.
         </p>
         <br>
         <p>
@@ -172,18 +172,19 @@
         <button class="carousel-btn prev" aria-label="Previous">&larr;</button>
         <div class="carousel-track-container">
           <div class="carousel-track">
-            <!--
+            
             <div class="cert-item">
-              <a href="URL" target="_blank">
-                <img src="certificates/CS50.png" alt="CS50 For Lawyers Certificate">
+              <a href="https://cs50.harvard.edu/certificates/c4a3e8ce-764a-48e3-bfa0-df0d5f9b35cf" target="_blank">
+                <img src="certificates/CS50L.png" alt="CS50 For Lawyers Certificate">
               </a>
             </div> 
-            -->
+
             <div class="cert-item">
               <a href="http://ude.my/UC-7e0afd8c-5231-445f-baa1-53131a632816" target="_blank">
                 <img src="certificates/CS.jpg" alt="Learn Ethical Hacking From Scratch Certificate">
               </a>
             </div>
+            
             <!--
             <div class="cert-item">
               <a href="URL" target="_blank">
@@ -196,14 +197,15 @@
                 <img src="certificates/Py_Core.png" alt="Python Core Certificate">
               </a>
             </div>
+
           </div>
         </div>
         <button class="carousel-btn next" aria-label="Next">&rarr;</button>
         <div class="carousel-indicators">
           <div class="indicator active" data-index="0"></div>
           <div class="indicator" data-index="1"></div>
+          <div class="indicator" data-index="2"></div>
           <!--
-            <div class="indicator" data-index="2"></div>
             <div class="indicator" data-index="3"></div>
           -->
         </div>
