--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
           <div class="carousel-track">
             
             <div class="cert-item">
+              <a href="https://courses.edx.org/certificates/653c48a4f41a4aecaa234c8193add41d" target="_blank">
+                <img src="certificates/HarvardX CS50L Certificate.png" alt="HarvardX CS50L Certificate">
+              </a>
+            </div>
+
+            <div class="cert-item">
               <a href="https://cs50.harvard.edu/certificates/c4a3e8ce-764a-48e3-bfa0-df0d5f9b35cf" target="_blank">
                 <img src="certificates/CS50L.png" alt="CS50 For Lawyers Certificate">
               </a>
@@ -185,13 +191,7 @@
               </a>
             </div>
             
-            <!--
-            <div class="cert-item">
-              <a href="URL" target="_blank">
-                <img src="certificates/IMG" alt="IMG_NAME">
-              </a>
-            </div> 
-          -->
+
             <div class="cert-item">
               <a href="https://www.sololearn.com/certificates/CT-XA53XLZY" target="_blank">
                 <img src="certificates/Py_Core.png" alt="Python Core Certificate">
@@ -205,9 +205,7 @@
           <div class="indicator active" data-index="0"></div>
           <div class="indicator" data-index="1"></div>
           <div class="indicator" data-index="2"></div>
-          <!--
-            <div class="indicator" data-index="3"></div>
-          -->
+          <div class="indicator" data-index="3"></div>
         </div>
       </div>
     </section>
