--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <a href="https://www.facebook.com/AdamG00D" target="_blank" title="Facebook">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.linkedin.com/in/adam-ghanem-556022235/" target="_blank" title="LinkedIn">
+            <a href="www.linkedin.com/in/adamg00d" target="_blank" title="LinkedIn">
               <i class="fab fa-linkedin"></i>
             </a>
             <a href="https://github.com/adamg00d" target="_blank" title="GitHub">
