--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="contact-content">
           <p>I'm always open to discussing new projects, creative ideas or opportunities to be part of your vision.</p>
           <div class="contact-icons">
-            <a href="https://www.facebook.com/AdamG00D" target="_blank" title="Facebook">
+            <a href="https://www.facebook.com/AdamGO0D" target="_blank" title="Facebook">
               <i class="fab fa-facebook"></i>
             </a>
             <a href="https://linkedin.com/in/adamg00d" target="_blank" title="LinkedIn">
